--- a/template/home.html
+++ b/template/home.html
@@ -1,1 +1,206 @@
-<h1>HOME PAGE</h1>
+<section class="home-wrapper d-grid gap-3">
+    <h1>HOME PAGE</h1>
+    
+    <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
+            <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
+            <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img src="../img/book1.jpg" class="w-100 d-block" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Books section</h5>
+                    <p>We can have some book img</p>
+                    <p>Later we can put the opacity to the full img</p>
+                </div>        
+            </div>
+            <div class="carousel-item">
+                <img src="../img/movie1.jpg" class="w-100 d-block" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Films section</h5>
+                    <p>We can have some films img</p>
+                    <p>Later we can put the opacity to the full img</p>
+                </div> 
+            </div>
+            <div class="carousel-item">
+                <img src="../img/game1.png" class="w-100 d-block" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Games section</h5>
+                    <p>We can have some games img</p>
+                    <p>Later we can put the opacity to the full img</p>
+                </div> 
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="container">
+        <span class="row-title">
+            Best books
+        </span>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <!-- <p class="row">BEST BOOKS</p> -->
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/books/books01.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="../img/books/books02.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/books/books03.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/books/books04.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <div class="container">
+        <span class="row-title">
+            Best Games
+        </span>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <!-- <p class="row">BEST BOOKS</p> -->
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/games/games01.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="../img/games/games02.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/games/games03.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/games/games04.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <div class="container">
+        <span class="row-title">
+            Best Films
+        </span>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+            <!-- <p class="row">BEST BOOKS</p> -->
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/movies/movies01.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="../img/movies/movies02.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/movies/movies03.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="../img/movies/movies04.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+
+</section>
+
+
+<style>
+    .carousel-item{
+        height: 60vh;
+    }
+    .carousel-caption{
+        background-color: rgba(11, 11, 11, 0.6);
+    }
+    .row-title{
+        font-size: 30px;
+        text-transform: uppercase;
+        color: #10002B;
+    }
+    .h-100{
+        display: flex;
+        align-items: center;
+        background-color: antiquewhite;
+    }
+    .card-img-top{
+        width: 150px;
+        height: 200px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+
+
+</style>
