--- a/template/login.html
+++ b/template/login.html
@@ -1,1 +1,3 @@
 <h1>LOGIN</h1>
+<button><a href="#!shop-card">Shop Cart</a></button>
+<button><a href="#!digital-wallet">Digital Waller</a></button>
