Add button to add product to cart. Created table layout for the shopping cart. Have to merge to get data and then use ng repeat, maps and so on

--- a/template/home.html
+++ b/template/home.html
@@ -54,37 +54,48 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
             </div>
             <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
-        </div>
+            </div>
     </div>
     <div class="container">
         <span class="row-title">
@@ -98,36 +109,48 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
             </div>
             <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                  <span>
+                    <a class="fa-solid fa-cart-arrow-down"></a>
+                  </span>
                 </div>
               </div>
+            </div>
         </div>
     </div>
     <div class="container">
@@ -135,43 +158,54 @@
             Best Films
         </span>
         <div class="row row-cols-1 row-cols-md-4 g-4">
-            <!-- <p class="row">BEST BOOKS</p> -->
-            <div class="col">
-              <div class="card h-100">
-                <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                <span>
+                  <a class="fa-solid fa-cart-arrow-down"></a>
+                </span>
               </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
-                </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                <span>
+                  <a class="fa-solid fa-cart-arrow-down"></a>
+                </span>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                <span>
+                  <a class="fa-solid fa-cart-arrow-down"></a>
+                </span>
               </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../media/img/book4.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Description. Later we can see with we need to add buttons, links, or anything else</p>
+                <span>
+                  <a class="fa-solid fa-cart-arrow-down"></a>
+                </span>
               </div>
+            </div>
+          </div>
         </div>
     </div>
 
@@ -181,14 +215,32 @@
 <style>
     .carousel-item{
         height: 60vh;
+      }
+    .carousel-item img {
+      height: 100%;
     }
     .carousel-caption{
-        background-color: rgba(11, 11, 11, 0.6);
+      background-color: rgba(11, 11, 11, 0.6);
     }
     .row-title{
         font-size: 30px;
         text-transform: uppercase;
         color: #10002B;
+    }
+    .card span{
+      display: flex;
+      justify-content: right;
+    }
+    .card span a{
+      font-size: 20px;
+      color: #10002B;
+      border: 0px none none;
+      text-decoration: none;
+      padding-right: 2vh;
+    }
+    .card span a:hover{
+      cursor: pointer;
+      color: #9C9290;
     }
 
 </style>
