--- a/template/shopcart.html
+++ b/template/shopcart.html
@@ -1,1 +1,45 @@
 <h1>SHOP CART</h1>
+
+<div class="col-8 table-responsive">
+    <table class="table table-striped
+    table-hover	
+    table-borderless
+    table-secondary
+    align-middle">
+        <thead class="table-dark">
+            <tr>
+                <th>Product ID</th>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Category</th>
+                <th>Price</th>
+                <th>Amount</th>
+                <th>Total</th>
+                <th>Options</th>
+            </tr>
+            </thead>
+            <tbody class="table-group-divider">
+                <tr class="table-light" >
+                    <td scope="row">Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>Item</td>
+                    <td>
+                        <button type="button" class="btn btn-secondary">Remove</button>
+                        <button type="button" class="btn btn-secondary">Edit</button>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="8">
+                        Total:
+                    </td>
+                </tr>
+            </tfoot>
+    </table>
+</div>
+
