--- a/template/game.html
+++ b/template/game.html
@@ -1,14 +1,15 @@
 <section>
     <article>
         <input ng-model="filterInput.item_name" placeholder="search"/>
-        <button ng-click="sort('item_name')" ng-class='sortClass("item_name")'>Sort of Name</button>
-        <button ng-click="sort('price')" ng-class='sortClass("price")'>Sort of Price</button>
-        <button ng-click="sort('release')" ng-class='sortClass("release")'>Sort of Release Date</button>
-        <button ng-click="resset()">Resset</button>
+        <button class="sortButton" id="button" ng-click="sort('item_name')">{{sortName}}</button>
+        <button class="sortButton" id="button" ng-click="sort('price')">{{sortPrice}}</button>
+        <button class="sortButton" id="button" ng-click="sort('release')">{{sortDate}}</button>
+        <button class="sortButton" id="button" ng-click="resset('item_name')">Resset</button>
     </article>
+
     <article>
         <div class="games">
-            <div ng-repeat="game in productsData | filter : {category:'game'} | filter : filterInput | orderBy : column : reverse" class="row row-cols-1 row-cols-md-4 g-4">
+            <div ng-repeat="game in productsData | filter : {category:'game'} | filter : filterInput | orderBy : key : reverse" class="row row-cols-1 row-cols-md-4 g-4">
                 <class="col">
                   <div class="card h-100">
                     <img src="../img/games/{{game.img_prod}}" class="card-img-top" alt="{{game.item_name}}">
@@ -16,7 +17,7 @@
                       <h5 class="card-title">{{game.item_name}}</h5>
                       <p class="card-price">{{game.price | currency}}</p>
                       <p class="card-release">{{game.release}}</p>
-                      <button >Add to Cart</button>
+                      <button>Add to Cart</button>
                     </div>
                   </div>
                 </div>
@@ -24,7 +25,12 @@
         </div>
     </article>
 </section>
+
 <style>
+
+    .sortButton{
+        width: 100px;
+    }
     .games{
         padding-top: 50px;
         display: flex;
@@ -33,17 +39,6 @@
         padding-right: 7%;
         column-gap: 2.5%;
         row-gap: 5vh;
-    }
-    .carousel-item{
-        height: 60vh;
-    }
-    .carousel-caption{
-        background-color: rgba(11, 11, 11, 0.6);
-    }
-    .row-title{
-        font-size: 30px;
-        text-transform: uppercase;
-        color: #10002B;
     }
     .h-100{
         display: flex;
