--- a/template/game.html
+++ b/template/game.html
@@ -1,36 +1,77 @@
 <section>
-    <article>
-        <input ng-model="filterInput.item_name" placeholder="search"/>
-        <button class="sortButton" id="button" ng-click="sort('item_name')">{{sortName}}</button>
-        <button class="sortButton" id="button" ng-click="sort('price')">{{sortPrice}}</button>
-        <button class="sortButton" id="button" ng-click="sort('release')">{{sortDate}}</button>
-        <button class="sortButton" id="button" ng-click="resset('item_name')">Resset</button>
-    </article>
+  <article>
+    <input class="filterName" ng-model="filterInput.item_name" placeholder="search"/>
+    <button class="sortButton" id="button" ng-click="sort('item_name')">{{sortName}}</button>
+    <button class="sortButton" id="button" ng-click="sort('price')">{{sortPrice}}</button>
+    <button class="sortButton" id="button" ng-click="sort('release')">{{sortDate}}</button>
+    <button class="sortButton" id="button" ng-click="resset('item_name')">Resset</button>
+  </article>
 
-    <article>
-        <div class="games">
-            <div ng-repeat="game in productsData | filter : {category:'game'} | filter : filterInput | orderBy : key : reverse" class="row row-cols-1 row-cols-md-4 g-4">
-                <class="col">
-                  <div class="card h-100">
-                    <img src="../img/games/{{game.img_prod}}" class="card-img-top" alt="{{game.item_name}}">
-                    <div class="card-body">
-                      <h5 class="card-title">{{game.item_name}}</h5>
-                      <p class="card-price">{{game.price | currency}}</p>
-                      <p class="card-release">{{game.release}}</p>
-                      <button>Add to Cart</button>
-                    </div>
-                  </div>
-                </div>
-            </div>
+  <article>
+    <div class="games">
+      <div ng-repeat="game in productsData | filter : {category:'game'} | filter : filterInput | orderBy : key : reverse" class="row row-cols-1 row-cols-md-4 g-4">
+        <class="col">
+        <div class="card h-100">
+          <img src="../img/games/{{game.img_prod}}" class="card-img-top" alt="{{game.item_name}}">
+          <div class="card-body">
+            <h5 class="card-title">{{game.item_name}}</h5>
+            <p class="card-price">{{game.price | currency}}</p>
+            <p class="card-release">{{game.release}}</p>
+            <button>Add to Cart</button>
+          </div>
         </div>
-    </article>
+      </div>
+    </div>
+  </article>
 </section>
+
+<script>
+  function modalContent(idx,productsData){
+      let mCont = $('#stDetails .m-content');
+      mCont.children().remove();
+      mCont.append(`<h3>Name: ${stDetails.first_name} ${stDetails.last_name}</h3>`);
+      mCont.append(`<h3>Email: ${stDetails.email}</h3>`);
+      mCont.append(`<h3>Gender: ${stDetails.gender} | Country: ${stDetails.Country} | Language: ${stDetails.lang}</h3>`);
+      let select = $('<select></select>');
+      $.each(courses,function(idx,val){
+          select.append(`<option value='${val.val}'>${val.txt}</option>`);
+      })
+      select.change(function(){
+          $(this).next().attr('disabled',false);
+      })
+      mCont.append(select);
+      mCont.append("<input placeholder='write the mark' disabled/>");
+      let saveBtn = $("<button>Save</button>");
+      saveBtn.click(function(){
+          let cName = $('select').val();
+          let mark = parseFloat($(this).prev().val());
+          if(savedStudents.has(idx)){
+              let studentObj = savedStudents.get(idx);
+              studentObj.updateMarks({cname:cName,cmark:mark});
+              console.log(savedStudents);
+          }else{
+              let studentObj = new stObj(stDetails,[{cname:cName,cmark:mark}]);
+              savedStudents.set(idx,studentObj);
+          }
+          $(this).parentsUntil('body').fadeOut();
+      });
+      mCont.append(saveBtn);
+      if(savedStudents.has(idx)){
+          let stObj = savedStudents.get(idx);
+          $.each(stObj.marks,function(idx,mark){
+              mCont.append(`<h5>course Name:${mark.cname} | ${mark.cmark}</h5>`);
+          })
+          mCont.append(`<h4>Avg: ${stObj.avg()} | max: ${stObj.max()}</h4>`);
+      }
+  }
+</script>
 
 <style>
 
     .sortButton{
         width: 100px;
     }
+
     .games{
         padding-top: 50px;
         display: flex;
@@ -40,29 +81,28 @@
         column-gap: 2.5%;
         row-gap: 5vh;
     }
+
     .h-100{
         display: flex;
         align-items: center;
         background-color: antiquewhite;
     }
+
     .card-img-top{
         width: 150px;
         height: 200px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
     }
-    .gamepart{
-        padding-right: 8%;
-        padding-left: 8%;
-    }
+
     .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 300px;
     margin: auto;
     text-align: center;
     font-family: arial;
-    
     }
+
     .price {
     color: grey;
     font-size: 22px;
