--- a/template/book.html
+++ b/template/book.html
@@ -1,1 +1,72 @@
 <h1>Book's Page</h1>
+<input ng-model = "input" type="text">
+<button ng-click = "show()">show</button>
+<button ng-model = 'name' ng-click = 'show()'>Name</button>
+<button value="price">Price</button>
+<button value="release">Release Date</button>
+<div class="row row-cols-1 row-cols-md-4 g-4">
+    <!-- <p class="row">BEST BOOKS</p> -->
+    <div class="col" ng-repeat="book in productsData | filter: {category:'book'} | filter : input">
+    <div class="card h-100">
+        <img src="../img/books/{{book.img_prod}}" class="card-img-top" alt="...">
+        <div class="card-body">
+        <h5 class="card-title">{{book.item_name}}</h5>
+        <h5 class="card-title">${{book.price}}</h5>
+        <h5 class="card-title">{{book.release}}</h5>
+        <button >Add to Cart</button>
+        <span>
+            <a class="fa-solid fa-cart-arrow-down"></a>
+        </span>
+        </div>
+    </div>
+    </div>
+</div>
+<style>
+
+    .h-100{
+        display: flex;
+        align-items: center;
+        background-color: antiquewhite;
+    }
+    .card-img-top{
+        width: 150px;
+        height: 200px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+    .gamepart{
+        padding-right: 8%;
+        padding-left: 8%;
+    }
+    .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+    padding-left: 15%;
+    padding-right: 15%;
+    }
+    .price {
+    color: grey;
+    font-size: 22px;
+    }
+
+    .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+    }
+
+    .card button:hover {
+    opacity: 0.7;
+    }
+    </style>
+
+    
