--- a/template/shopcart.html
+++ b/template/shopcart.html
@@ -1,6 +1,6 @@
 <h1>SHOP CART</h1>
 
-<div class="col-8 table-responsive">
+<div class="col-10 table-responsive">
     <table class="table table-striped
     table-hover	
     table-borderless
@@ -8,9 +8,9 @@
     align-middle">
         <thead class="table-dark">
             <tr>
-                <th>Product ID</th>
+                <th>Product</th>
                 <th>Name</th>
-                <th>Type</th>
+                <!-- <th>Type</th> -->
                 <th>Category</th>
                 <th>Price</th>
                 <th>Amount</th>
@@ -19,27 +19,34 @@
             </tr>
             </thead>
             <tbody class="table-group-divider">
-                <tr class="table-light" >
-                    <td scope="row">Item</td>
-                    <td>Item</td>
-                    <td>Item</td>
-                    <td>Item</td>
-                    <td>Item</td>
-                    <td>Item</td>
-                    <td>Item</td>
+                <tr class="table-light" ng-repeat="(idx, item) in cartArray">
+                    <td scope="row">{{idx+1}}</td>
+                    <td>{{item.item_name}}</td>
+                    <!-- <td>{{item.physical}}</td> -->
+                    <td class="cat">{{item.category}}</td>
+                    <td>{{item.price | currency}}</td>
+                    <td>{{item.qty}}</td>
                     <td>
-                        <button type="button" class="btn btn-secondary">Remove</button>
-                        <button type="button" class="btn btn-secondary">Edit</button>
+                        {{item.price * item.qty | currency}}
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-secondary" ng-click="delItem(item.id)">Remove</button>
                     </td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <td colspan="8">
-                        Total:
+                        Total: {{calTotal() | currency}}
                     </td>
                 </tr>
             </tfoot>
     </table>
 </div>
+
+<style>
+    .cat{
+        text-transform: capitalize;
+    }
+</style>
 
